--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -17,12 +17,12 @@
         required
         #emailInput="ngModel"
       />
-      <mat-error *ngIf="emailInput.hasError('required')"
-        >Email is required</mat-error
-      >
-      <mat-error *ngIf="!emailInput.hasError('required')"
-        >Email is invalid</mat-error
-      >
+      <mat-error *ngIf="emailInput.hasError('required')">
+        Email is required
+      </mat-error>
+      <mat-error *ngIf="!emailInput.hasError('required')">
+        Email is invalid
+      </mat-error>
     </mat-form-field>
     <mat-form-field hintLabel="Should be at least 6 characters long">
       <input
