--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -19,7 +19,7 @@
   <mat-list-item *ngIf="isAuth">
     <button mat-icon-button>
       <mat-icon>eject</mat-icon>
-      <span class="nav-caption" (click)="onClose()">Logout</span>
+      <span class="nav-caption" (click)="onLogout()">Logout</span>
     </button>
   </mat-list-item>
 </mat-nav-list>
