--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,25 +1,31 @@
 <section class="new-training" fxLayout fxLayoutAlign="center center">
-  <mat-card fxFlex.xs="90%" fxFlex="400px">
-    <mat-card-title fxLayoutAlign="center"
-      >Time to start!</mat-card-title
-    >
-    <mat-card-content fxLayoutAlign="center">
-      <mat-form-field>
-        <mat-label>Select an exercise</mat-label>
-        <mat-select>
-          <mat-option
-            *ngFor="let exercise of exercises"
-            value="exercise.id"
+  <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
+    <mat-card fxFlex.xs="100%" fxFlex.sm="400px">
+      <mat-card-title fxLayoutAlign="center"
+        >Time to start working out!</mat-card-title
+      >
+      <mat-card-content fxLayoutAlign="center">
+        <mat-form-field>
+          <mat-select
+            placeholder="Choose exercise"
+            ngModel
+            name="exercise"
+            required
           >
-            {{ exercise.name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" mat-button (click)="onStartTraining()">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+            <mat-option
+              *ngFor="let exercise of exercises"
+              [value]="exercise.id"
+            >
+              {{ exercise.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="center">
+        <button type="submit" mat-button [disabled]="f.invalid">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
