Finished AngularFire hookup for training

--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -15,7 +15,7 @@
       >Date</mat-header-cell
     >
     <mat-cell *matCellDef="let element">{{
-      element.date | date
+      element.date.toDate() | date
     }}</mat-cell>
   </ng-container>
 
